--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -102,3 +102,53 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
+@media(max-width:768px){
+    .contact{
+        align-items: center;
+        margin: 50px 70px;
+        gap: 40px;
+    }
+    .contact-title h1{
+        font-size: 50px;
+        padding: 0px;
+        font-weight: 600;
+    }
+    .contact-title img{
+        width: 130px;
+        margin-right: -20px;
+    }
+    .contact-section{
+        flex-direction: column;
+        gap: 50px;
+    }
+    .contact-left h1{
+        font-size: 40px;
+    }
+    .contact-left p{
+        font-size: 15px;
+        max-width: 100%;
+        line-height: 28px;
+    }
+    .contact-detail{
+        gap: 20px;
+    }
+    .contact-detail img{
+        width: 25px;
+    }
+    .contact-right label{
+        font-size: 20px;
+    }
+    .contact-right input{
+        width: 100%;
+        font-size: 20px;
+    }
+    .contact-right textarea{
+        width: 95%;
+        font-size: 20px;
+    }
+    .contact-submit{
+        font-size: 20px;
+        padding: 15px 40px;
+        margin-bottom: 30px;
+    }
+}
