--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -65,7 +65,28 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
-@media (max-width: 768px) {
+@media(max-width: 481px) {
+    .footer{
+        margin: 50px 70px;
+    }
+    .footer-top{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .footer-top-right{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+    .footer-bottom{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .footer-bottom-right{
+        gap: 30px;
+    }
+}
+@media(min-width: 481px) and (max-width: 768px) {
     .footer{
         margin: 50px 70px;
     }
