--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -102,7 +102,61 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
-@media(max-width:768px){
+@media(max-width: 481px){
+    .contact{
+        align-items: center;
+        margin: 50px 70px;
+        gap: 40px;
+    }
+    .contact-title h1{
+        font-size: 10cqw;
+        padding: 0px;
+        font-weight: 600;
+    }
+    .contact-title img{
+        width: 30cqw;
+        margin-right: -20px;
+    }
+    .contact-section{
+        flex-direction: column;
+        gap: 50px;
+    }
+    .contact-left h1{
+        font-size: 11cqw;
+    }
+    .contact-left p{
+        font-size: 3.4cqw;
+        max-width: 100%;
+        line-height: 28px;
+    }
+    .contact-detail{
+        gap: 20px;
+    }
+    .contact-detail img{
+        width:6.4cqw;
+    }
+    .contact-right{
+        gap: 20px;
+    }
+    .contact-right label{
+        font-size: 4cqw;
+    }
+    .contact-right input{
+        width: 100%;
+        height: 10cqw;
+        font-size: 20px;
+    }
+    .contact-right textarea{
+        width: 95%;
+        font-size: 20px;
+    }
+    .contact-submit{
+        font-size: 3.4cqw;
+        padding: 15px 40px;
+        margin-bottom: 20px;
+    }
+}
+@media(min-width: 481px) and (max-width: 768px){
     .contact{
         align-items: center;
         margin: 50px 70px;
@@ -149,6 +203,6 @@
     .contact-submit{
         font-size: 20px;
         padding: 15px 40px;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
 }
