--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -56,13 +56,48 @@
     border: 2px solid #fff;
     cursor: pointer;
 }
+.hero-resume a{
+    text-decoration: none;
+    color: white;
+}
 .hero-connect:hover{
     border: 2px solid white;
 }
 .hero-resume:hover{
     border-color: #b415ff;
 }
-@media(max-width:768px){
+@media(max-width: 481px){
+    .hero .img-container{
+        margin-top: 40px;
+        width: 260px;
+    }
+    .hero h1{
+        font-size: 8.5cqw;
+        width: 90%;
+        margin-top: 30px;
+    }
+    .hero p{
+        width: 60%;
+        font-size: 3.4cqw;
+        line-height: 6cqw;
+        margin: 3% 0px;
+    }
+    .hero-action{
+        gap: 15px;
+        font-size: 3cqw;
+        font-weight: 500;
+        margin-bottom: 50px;
+    }
+    .hero-connect{
+        padding: 20px 30px;
+        border-radius: 40px;
+    }
+    .hero-resume{
+        padding: 20px 50px;
+        border-radius: 40px;
+    }
+}
+@media(min-width: 481px) and (max-width: 768px){
     .hero .img-container{
         margin-top: 40px;
         width: 260px;
@@ -85,7 +120,7 @@
         margin-bottom: 50px;
     }
     .hero-connect{
-        padding: 20PXpx 30px;
+        padding: 20px 30px;
         border-radius: 40px;
     }
     .hero-resume{
