--- a/src/components/MyWork/MyWork.css
+++ b/src/components/MyWork/MyWork.css
@@ -53,7 +53,37 @@
     gap: 20px;
     transition: 0.6s;
 }
-@media(max-width:768px){
+@media(max-width: 481px){
+    .mywork{
+        align-items: center;
+        margin: 50px 70px;
+        gap: 50px;
+    }
+    .mywork-title h1{
+        padding: 0;
+        font-weight: 600;
+        font-size: 10cqw;
+    }
+    .mywork-title img{
+        width: 30cqw;
+        margin-right: -20px;
+    }
+    .mywork-container{
+        grid-template-columns: 1fr;
+        gap: 30px;
+    }
+    .mywork-container img{
+        width: 100%;
+        height: 100%;
+    }
+    .mywork-showmore{
+        padding: 20px 40px;
+        font-size: 4cqw;
+        margin: 50px auto;
+        cursor: pointer;
+    }
+}
+@media(min-width: 481px) and (max-width: 768px){
     .mywork{
         align-items: center;
         margin: 50px 70px;
